--- a/templates/docs/examples/patterns/slider/slider-input.html
+++ b/templates/docs/examples/patterns/slider/slider-input.html
@@ -36,68 +36,70 @@
     disabled
     tabindex="0">
 </div>
+
 <script>
-  var isWebkit =
-    /Chrome/i.test(navigator.userAgent) || /Safari/i.test(navigator.userAgent);
-  var isIE = /NET/i.test(navigator.userAgent);
+var isWebkit =
+  /Chrome/i.test(navigator.userAgent) || /Safari/i.test(navigator.userAgent);
+var isIE = /NET/i.test(navigator.userAgent);
 
-  var PROGRESS_COLOUR = '#06c';
-  var EMPTY_COLOUR = '#fff';
+var PROGRESS_COLOUR = '#06c';
+var EMPTY_COLOUR = '#fff';
 
-  /**
-   Renders gradient to fake progress color in webkit browsers.
-   @param {HTMLElement} slider Slider element to render background on.
-  */
-  function renderSlider(slider) {
-    if (isWebkit) {
-      var value = (slider.value - slider.min) / (slider.max - slider.min);
-      slider.style.backgroundImage = (
-        '-webkit-gradient(linear, left top, right top, color-stop('
-        + value + ', ' + PROGRESS_COLOUR + '), color-stop('
-        + value + ', ' + EMPTY_COLOUR + '))'
-      );
-    }
+/**
+ Renders gradient to fake progress color in webkit browsers.
+ @param {HTMLElement} slider Slider element to render background on.
+*/
+function renderSlider(slider) {
+  if (isWebkit) {
+    var value = (slider.value - slider.min) / (slider.max - slider.min);
+    slider.style.backgroundImage = (
+      '-webkit-gradient(linear, left top, right top, color-stop('
+      + value + ', ' + PROGRESS_COLOUR + '), color-stop('
+      + value + ', ' + EMPTY_COLOUR + '))'
+    );
   }
+}
 
-  function equaliseValues(receive, give) {
-    receive.value = give.value;
-    give.value = receive.value;
-  }
+function equaliseValues(receive, give) {
+  receive.value = give.value;
+  give.value = receive.value;
+}
 
-  /**
-    Attaches change listener to sliders to update their background color.
-    @param {HTMLElement} slider Slider element to render background on.
-  */
-  function initSlider(slider) {
-    var input = document.getElementById(slider.id + '-input');
-    renderSlider(slider);
+/**
+  Attaches change listener to sliders to update their background color.
+  @param {HTMLElement} slider Slider element to render background on.
+*/
+function initSlider(slider) {
+  var input = document.getElementById(slider.id + '-input');
+  renderSlider(slider);
 
-    if (input) {
-      // Synchronise values of input and slider
-      equaliseValues(input, slider);
-      input.addEventListener('input', function () {
-        if (!input.value) {
-          input.value = 0;
-        }
-        equaliseValues(slider, input);
-        renderSlider(slider);
-      });
-    }
-
-    // Attach change listener to slider to update input value
-    // Fix for IE as it doesn't support 'oninput'
-    slider.addEventListener(isIE ? 'change' : 'input', function () {
-      if (input) {
-        equaliseValues(input, slider);
+  if (input) {
+    // Synchronise values of input and slider
+    equaliseValues(input, slider);
+    input.addEventListener('input', function() {
+      if (!input.value) {
+        input.value = 0;
       }
+      equaliseValues(slider, input);
       renderSlider(slider);
     });
   }
 
-  // Setup all sliders on the page.
-  var sliders = document.querySelectorAll('.p-slider');
+  // Attach change listener to slider to update input value
+  // Fix for IE as it doesn't support 'oninput'
+  slider.addEventListener(isIE ? 'change' : 'input', function() {
+    if (input) {
+      equaliseValues(input, slider);
+    }
+    renderSlider(slider);
+  });
+}
 
-  for (var i = 0, l = sliders.length; i < l; i++) {
-    initSlider(sliders[i]);
-  }
-</script> {% endblock %}
+// Setup all sliders on the page.
+var sliders = document.querySelectorAll('.p-slider');
+
+for (var i = 0, l = sliders.length; i < l; i++) {
+  initSlider(sliders[i]);
+}
+</script>
+{% endblock %}
