remove action attrib that had no value

--- a/templates/docs/examples/layouts/documentation.html
+++ b/templates/docs/examples/layouts/documentation.html
@@ -39,7 +39,7 @@
 
 <section id="search-docs" class="p-strip--light is-shallow">
   <div class="row">
-    <form class="p-search-box u-no-margin--bottom" action="#">
+    <form class="p-search-box u-no-margin--bottom">
       <input type="search" class="p-search-box__input" name="q" placeholder="Search documentation" required="" />
       <button type="reset" class="p-search-box__reset"><i class="p-icon--close">Close</i></button>
       <button type="submit" class="p-search-box__button"><i class="p-icon--search">Search</i></button>
