--- a/templates/docs/examples/templates/tick-element-comparison.html
+++ b/templates/docs/examples/templates/tick-element-comparison.html
@@ -9,7 +9,7 @@
     </div>
     <div class="row">
       <div class="col-3">
-        <form action="">
+        <form>
           <input type="checkbox" id="checkExample2">
           <label for="checkExample2">Checkbox option 2</label>
           <input type="radio" name="RadioOptions" id="Radio1" value="option1" checked>
@@ -17,7 +17,7 @@
         </form>
       </div>
       <div class="col-3">
-        <form action="">
+        <form>
           <input type="text">
           <button>Button</button>
           <button class="p-button--neutral">Button</button>
@@ -30,14 +30,14 @@
         </form>
       </div>
       <div class="col-3">
-        <form action="">
+        <form>
           <input type="text">
           <input type="checkbox" id="checkExample1" checked>
           <label for="checkExample1">Checkbox option 1</label>
         </form>
       </div>
       <div class="col-3">
-        <form action="">
+        <form>
           <input type="text" placeholder="Enter email">
           <select name="" id=""></select>
         </form>
