remove attr checked from select

--- a/templates/docs/examples/templates/snapcraft-publicise.html
+++ b/templates/docs/examples/templates/snapcraft-publicise.html
@@ -173,7 +173,7 @@
           </div>
           <div class="col-7">
             <form class="p-form--inline js-language-select">
-              <select name="language" checked="checked">
+              <select name="language">
                   <option value="de">Deutsch</option>
                   <option value="en" selected="">English</option>
                   <option value="es">Español</option>
